# Gaello-Graph-Actions

./: .gitignore  README.md  pyproject.toml  setup.py
builder/: executor.py  ops.py  parser.py  worker.py
queries/: subimtor.py
trends/: engine.py  static.py
utils_ops/: envHandler.py  logs.py  paths.py
